--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,3 +3,10 @@ steps:
   entrypoint: npm
   args: ['install']
   dir: app
+- name: node:10.15.1
+  entrypoint: npm
+  args: ['run', 'build']
+  dir: app
+- name: ubuntu:18.04
+  args: ['ls', '-lR', 'dist']
+  dir: app
