--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,8 +5,15 @@ steps:
   dir: app
 - name: node:10.15.1
   entrypoint: npm
+  args: ['install']
+  dir: main
+- name: node:10.15.1
+  entrypoint: npm
   args: ['run', 'build']
   dir: app
 - name: ubuntu:18.04
-  args: ['ls', '-lR', 'dist']
-  dir: app
+  args: ['./prep-assets.sh']
+  dir: main
+- name: gcr.io/cloud-builders/gsutil
+  args: ['-m', 'cp', '-r', '.', 'gs://leftoverbytes-content']
+  dir: app/dist
