--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,3 +17,6 @@ steps:
 - name: gcr.io/cloud-builders/gsutil
   args: ['-m', 'cp', '-r', '.', 'gs://leftoverbytes-content']
   dir: app/dist
+- name: gcr.io/cloud-builders/gcloud
+  args: ['app', 'deploy', '--no-promote']
+  dir: main
