--- a/main/package.json
+++ b/main/package.json
@@ -20,7 +20,8 @@
     "e2e-test": "repo-tools test deploy"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "prismic-javascript": "^2.0.1"
   },
   "devDependencies": {
     "@google-cloud/nodejs-repo-tools": "^3.0.0"
