--- a/main/package.json
+++ b/main/package.json
@@ -21,7 +21,8 @@
   },
   "dependencies": {
     "express": "^4.16.3",
-    "prismic-javascript": "^2.0.1"
+    "prismic-javascript": "^2.0.1",
+    "xmlbuilder": "^11.0.0"
   },
   "devDependencies": {
     "@google-cloud/nodejs-repo-tools": "^3.0.0"
