Tries out esm to load es6 modules

--- a/main/package.json
+++ b/main/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "prismic-javascript": "^2.0.1",
-    "xmlbuilder": "^11.0.0"
+    "xmlbuilder": "^11.0.0",
+    "esm": "^3.2.22"
   },
   "devDependencies": {
     "@google-cloud/nodejs-repo-tools": "^3.0.0"
