--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build && mv dist/index.html dist/manifest.json dist/service-worker.js dist/robots.txt ../main",
+    "build": "vue-cli-service build && mv dist/index.html dist/manifest.json dist/service-worker.js ../main",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
