--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "prismic-javascript": "^2.0.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.6",
+    "vue-material-design-icons": "^4.2.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
