--- a/app/package.json
+++ b/app/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "prismic-javascript": "^2.0.1",
     "register-service-worker": "^1.6.2",
+    "v-scroll-lock": "^1.1.0",
     "vue": "^2.6.6",
-    "vue-material-design-icons": "^4.2.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
