--- a/main/package.json
+++ b/main/package.json
@@ -20,10 +20,11 @@
     "e2e-test": "repo-tools test deploy"
   },
   "dependencies": {
+    "esm": "^3.2.22",
     "express": "^4.16.3",
+    "jwt-decode": "^2.2.0",
     "prismic-javascript": "^2.0.1",
-    "xmlbuilder": "^11.0.0",
-    "esm": "^3.2.22"
+    "xmlbuilder": "^11.0.0"
   },
   "devDependencies": {
     "@google-cloud/nodejs-repo-tools": "^3.0.0"
