--- a/main/package.json
+++ b/main/package.json
@@ -20,6 +20,7 @@
     "e2e-test": "repo-tools test deploy"
   },
   "dependencies": {
+    "@google-cloud/datastore": "^5.0.0",
     "esm": "^3.2.22",
     "express": "^4.16.3",
     "jwt-decode": "^2.2.0",
