--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "register-service-worker": "^1.6.2",
     "v-scroll-lock": "^1.1.0",
     "vue": "^2.6.6",
+    "vue-cookies": "^1.5.13",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
