Create a custom index for datastore

--- a/main/app.yaml
+++ b/main/app.yaml
@@ -18,3 +18,8 @@ handlers:
   script: auto
 env_variables:
   STORAGE_BUCKET: leftoverbytes.appspot.com
+indexes:
+- kind: Comment
+  properties:
+  - name: post
+  - name: created
