--- a/main/app.yaml
+++ b/main/app.yaml
@@ -23,3 +23,5 @@ env_variables:
   FACEBOOK_LOGIN_URL: https://www.facebook.com/v5.0/dialog/oauth
   FACEBOOK_TOKEN_URL: https://graph.facebook.com/v5.0/oauth/access_token
   FACEBOOK_INFO_URL: https://graph.facebook.com/me
+  NOTIFY_RECIPIENT: Ryan Calhoun <ryan@leftoverbytes.com>
+  NOTIFY_SENDER: Leftover Bytes <notify@leftoverbytes.com>
