add a redirect for a helm chart index

--- a/main/app.yaml
+++ b/main/app.yaml
@@ -17,6 +17,7 @@ handlers:
   redirect_http_response_code: 301
   script: auto
 env_variables:
+  CONTENTS: https://storage.googleapis.com/leftoverbytes-content
   STORAGE_BUCKET: leftoverbytes.appspot.com
   GOOGLE_LOGIN_URL: https://accounts.google.com/o/oauth2/v2/auth
   GOOGLE_TOKEN_URL: https://oauth2.googleapis.com/token
