--- a/main/package.json
+++ b/main/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "appengine-hello-world",
-  "description": "Simple Hello World Node.js sample for Google App Engine Standard Environment.",
-  "version": "0.0.1",
+  "name": "leftover-bytes",
+  "description": "Leftover Bytes appengine deployment",
+  "version": "1.0.0",
   "private": true,
   "license": "Apache-2.0",
-  "author": "Google Inc.",
+  "author": "Ryan Calhoun",
   "repository": {
     "type": "git",
-    "url": "https://github.com/GoogleCloudPlatform/nodejs-docs-samples.git"
+    "url": "https://source.developers.google.com/p/leftoverbytes/r/web"
   },
   "engines": {
-    "node": ">=8"
+    "node": ">=12"
   },
   "scripts": {
     "deploy": "gcloud app deploy",
